	constraint so they don't run on older Windows OS. [Bug 578158]
        * generic/tclIOUtil.c:
	* generic/tcl.h:
	* generic/tclInt.h:
	* generic/tclTest.c:
	* mac/tclMacChan.c:
	* unix/tclUnixChan.c:
	* win/tclWinChan.c:
	* doc/FileSystem.3: cleaned up internal handling of
	Tcl_FSOpenFileChannel to remove duplicate code, and make
	writing external vfs's clearer and easier.  No
	functionality change.
	
2002-07-06  Don Porter  <dgp@users.sourceforge.net>

	* tests/pkgMkIndex.test:  Constrained tests of [load] package indexing
	to those platforms where the testing shared libraries have been built.
	[Bug 578166].

2002-07-05  Don Porter  <dgp@users.sourceforge.net>
	* changes: added recent changes

2002-07-05  Reinhard Max  <max@suse.de>

	* generic/tclClock.c (FormatClock): Convert the format string to
	UTF8 before calling TclpStrftime, so that non-ASCII characters
	don't get mangled when the result string is being converted back.
	* tests/clock.test: Added a test for that.

2002-07-05  Donal K. Fellows  <fellowsd@cs.man.ac.uk>

	* unix/Makefile.in (ro-test,ddd,GDB,DDD): Created new targets to
	allow running the test suite with a read-only current directory,
	running under ddd instead of gdb, and factored out some executable
	names for broken sites (like mine) where gdb and ddd are installed
	with non-standard names...

	* tests/httpold.test: Altered test names to httpold-* to avoid
	clashes with http.test, and stopped tests from failing when the
	current directory is not writable...

	* tests/event.test:		Stop these tests from failing
	* tests/ioUtil.test:		when the current directory is
	* tests/regexp.test:		not writable...
	* tests/regexpComp.test: 
	* tests/source.test: 
	* tests/unixFile.test: 
	* tests/unixNotfy.test: 

	* tests/unixFCmd.test:		Trying to make these test-files
	* tests/macFCmd.test:		not bomb out with an error when
	* tests/http.test:		the current directory is not
	* tests/fileName.test:		writable...
	* tests/env.test:
